--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 					<p>We are talking about accounts, not about creating accounts.</p>
 
-					<p>Course Grained, not fine grained</p>
+					<p>Coarse Grained, not fine grained</p>
 
 					<aside class="notes">
 						Accounts,  not creating an account
@@ -128,7 +128,7 @@
 
 				<section>
 					<section>
-						<h2>Course Grained</h2>
+						<h2>Coarse Grained</h2>
 						<h5>Tightly Coupled to Action</h5>
 
 						<p style="font-size: 30px">
@@ -145,7 +145,7 @@
 					</section>
 
 					<section>
-						<h2>Course Grained</h2>
+						<h2>Coarse Grained</h2>
 						<h5>This Smells!</h5>
 						<p style="font-size: 30px">
 							<span>/getAccount</span><br />
